:ambulance: 修改 browsersllist

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "rules": {}
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
+    ">0.2%",
+    "dead",
+    "not op_mini all"
   ]
 }
