--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "core-js": "^3.33.2",
     "element-ui": "^2.15.14",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "website-monitoring": "^0.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
